# Lift-Kata

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  meson.build
cpp/src/: lift.cpp  lift.h
cpp/subprojects/: catch2.wrap
cpp/subprojects/approvaltests/: ApprovalTests.v.7.0.0.hpp  meson.build
cpp/test/: ApprovalTests.hpp  lift_catch.cpp  liftsystem_catch.EmptySystem.approved.txt  liftsystem_catch.IllegalState.approved.txt  liftsystem_catch.LargeLiftSystem.approved.txt  liftsystem_catch.SampleLiftSystem.approved.txt  liftsystem_catch.cpp  main.cpp
csharp/: Lift.sln
csharp/Lift/: Call.cs  Lift.cs  Lift.csproj  LiftAndDoorPrinter.cs  LiftPrinter.cs  LiftPrinterTest.LargeLiftSystem.approved.txt  LiftPrinterTest.NoLifts.approved.txt  LiftPrinterTest.OneLiftNoDoors.approved.txt  LiftPrinterTest.SampleLiftSystem.approved.txt  LiftPrinterTest.cs  LiftSystem.cs  LiftSystemPrinter.cs  LiftSystemTest.cs  SimpleLiftPrinter.cs
golang/: README.md  go.mod  go.sum
golang/lift/: lift.go  lift_printer.go  lift_printer_test.TestIllegalState.approved.txt  lift_printer_test.TestLargeLiftSystem.approved.txt  lift_printer_test.TestNoDoors.approved.txt  lift_printer_test.TestPrintNoLifts.approved.txt  lift_printer_test.TestSimpleLiftSystem.approved.txt  lift_printer_test.go
java/: pom.xml
java/src/main/java/codingdojo/: Call.java  Direction.java  Lift.java  LiftSystem.java
java/src/test/java/codingdojo/: LiftAndDoorPrinter.java  LiftPrinter.java  LiftPrinterTest.java  LiftPrinterTest.largeLiftSystem.approved.txt  LiftSystemPrinter.java  LiftSystemTest.answerRequest.approved.txt  LiftSystemTest.java  SimpleLiftPrinter.java
js/: README.md  package-lock.json  package.json
js/src/: Call.js  Direction.js  Lift.js  LiftSystem.js
js/test/: LiftAndDoorPrinter.js  LiftPrinter.no_lifts.approved.txt  LiftPrinter.sample_lift_system.approved.txt  LiftPrinter.test.js  LiftSystem.test.js  LiftSystemPrinter.js  SimpleLiftPrinter.js  common.js  mocha.opts
js/test/printHelpers/: getWhitespace.js
php/: README.md  composer.json  ecs.yaml  phpstan.neon  phpunit.xml
php/src/: Call.php  Direction.php  Lift.php  LiftSystem.php
php/tests/: CallTest.php  LiftAndDoorPrinter.php  LiftPrinter.php  LiftPrinterTest.php  LiftSystemPrinter.php  LiftSystemTest.php  LiftTest.php  SimpleLiftPrinter.php
php/tests/approvals/: LiftPrinterTest.testOneLiftNoDoors.approved.txt  LiftPrinterTest.testSampleLiftSystem.approved.txt  LiftSystemTest.testDoSomething.received.txt
python/: .gitignore  README.md  lift.py  lift_printers.py  pytest.ini  requirements.txt
python/test/: test_lift.py  test_lift_printer.py  test_lift_printer.test_large_lift_system.approved.txt  test_lift_printer.test_no_lifts.approved.txt  test_lift_printer.test_one_lift.approved.txt  test_lift_printer.test_one_lift_doors_open.approved.txt  test_lift_printer.test_several_lifts_with_requests.approved.txt  test_lift_printer.test_several_lifts_with_requests_and_calls.approved.txt
